# career-bridge-ai

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .semgrep.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Dockerfile  FILES_INDEX.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SECURITY.md  SETUP_COMPLETE.md  USER_MANUAL.md  app.py  bandit  career_engine.py  cliff.toml  config.py  database.py  gitlab-ci.yml  gitleaks.toml  mypy.ini  opportunity_engine.py  pyproject.toml  requirements-dev.txt  requirements.txt  (+8 more)
.github/workflows/: code-quality.yml
.specify/: README.md  constitution.md
.specify/memory/: constitution.md
.specify/templates/: feature-spec.md  plan-template.md  plan.md  spec-template.md  tasks-template.md
data/: careers.csv  opportunities.csv  schemes.csv  scholarships.csv
docs/: QUALITY.md
services/: __init__.py  ai_provider.py  language.py
specs/: feature-spec.md
specs/example-feature/: spec.md
tests/: pytest.ini  test_ai_services.py  test_basic.py  test_data_contracts.py  test_project_configuration.py  test_resume_and_career_fallbacks.py
